--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -1,2 +1,6 @@
 version=${project.version}
 artifactId=${project.artifactId}
+build.version=${pom.version}
+build.date=${build.time}
+build.url=${pom.url}
+build.name=${pom.name}
