--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
                         </goals>
                         <configuration>
                             <name>build.time</name>
-                            <pattern>yyyy.MM.dd hh:mm</pattern>
+                            <pattern>yyyy.MM.dd HH:mm</pattern>
                             <locale>zh_CN</locale>
                             <timeZone>GMT+8</timeZone>
                         </configuration>
