--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,13 @@
 
     <groupId>com.keuin</groupId>
     <artifactId>bungeecross</artifactId>
-    <version>1.3.8+${build.number}</version>
+    <version>1.3.8+${build.time}-${build.number}</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
+
         <build.manifest.section>Build Details</build.manifest.section>
         <build.unknown>UNKNOWN</build.unknown>
         <build.number>${build.unknown}</build.number>
@@ -102,7 +104,7 @@
                         </goals>
                         <configuration>
                             <name>build.time</name>
-                            <pattern>yyyy.MM.dd HH:mm</pattern>
+                            <pattern>yyyyMMdd.HHmm</pattern>
                             <locale>zh_CN</locale>
                             <timeZone>GMT+8</timeZone>
                         </configuration>
