--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
                             </excludes>
                         </filter>
                     </filters>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
                 </configuration>
                 <executions>
                     <execution>
