--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>com.keuin</groupId>
     <artifactId>bungeecross</artifactId>
-    <version>2.0.0-alpha-SNAPSHOT</version>
+    <version>2.0.0-pre2-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <!-- <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format> -->
+        <!--        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>-->
 
         <build.manifest.section>Build Details</build.manifest.section>
         <build.unknown>SNAPSHOT</build.unknown>
@@ -39,9 +39,9 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                         </manifest>
-                        <!-- <manifestEntries>
-                            <Build-Time>${maven.build.timestamp}</Build-Time>
-                        </manifestEntries> -->
+                        <!--                        <manifestEntries>-->
+                        <!--                            <Build-Time>${maven.build.timestamp}</Build-Time>-->
+                        <!--                        </manifestEntries>-->
                         <manifestSections>
                             <manifestSection>
                                 <name>${build.manifest.section}</name>
@@ -93,7 +93,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- <plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <version>3.2.0</version>
@@ -111,7 +111,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin> -->
+            </plugin>
         </plugins>
 
         <resources>
