--- a/pom.xml
+++ b/pom.xml
@@ -138,12 +138,6 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>3.5.1</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
@@ -177,6 +171,21 @@
             <artifactId>bson</artifactId>
             <version>4.2.3</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.keuin</groupId>
+            <artifactId>psmb4j</artifactId>
+            <version>1.1-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/psmb4j-1.1-SNAPSHOT.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.keuin</groupId>
+            <artifactId>psmb4j</artifactId>
+            <version>1.1-SNAPSHOT</version>
+            <type>javadoc</type>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/psmb4j-1.1-SNAPSHOT-sources.jar</systemPath>
         </dependency>
     </dependencies>
 
